[gd_scene format=3 uid="uid://cbbn0wa3uhauv"]

[ext_resource type="Script" uid="uid://obquawutrjnb" path="res://Scenes/Gameplay/Main Upgrade Screen/main_upgrades_screen.gd" id="1_qiblr"]
[ext_resource type="PackedScene" uid="uid://c5g5hfs2byfy6" path="res://Scenes/Upgrades Classes/Earn/upgrade_earn_class.tscn" id="2_fgo2i"]
[ext_resource type="Script" uid="uid://d4n32f1itqr7s" path="res://Scenes/Upgrades Classes/Crit/upgrade_crit_class.gd" id="3_q5fsn"]
[ext_resource type="PackedScene" uid="uid://cicgswq2apopp" path="res://Scenes/Upgrades Classes/Crit Chance/upgrade_crit_chance_class.tscn" id="4_tg0j2"]
[ext_resource type="AudioStream" uid="uid://i0vegtw5wynm" path="res://SFX/Buttons_1Part_Menu.wav" id="5_ekqlg"]
[ext_resource type="AudioStream" uid="uid://beg6l825wfcyo" path="res://SFX/Buttons_2Part_Menu.wav.wav" id="6_o4eol"]

[sub_resource type="CanvasTexture" id="CanvasTexture_qw60k"]

[sub_resource type="CanvasTexture" id="CanvasTexture_5yls4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_p6jpk"]

[sub_resource type="LabelSettings" id="LabelSettings_amr5s"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_1r6ip"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_lixft"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_qw60k"]
font_size = 40

[node name="Main_Upgrades_Screen" type="Node2D" unique_id=1359911912 node_paths=PackedStringArray("money_counter_label", "earn_per_second_label", "crit_chance_label", "crit_mult_label", "earn_mult_label", "click_sound", "clack_sound", "earn_sound", "timer_between_earning")]
script = ExtResource("1_qiblr")
money_counter_label = NodePath("Center/Stats/Label_Money_Counter")
earn_per_second_label = NodePath("Center/Stats/Label_Earn_Per_Second")
crit_chance_label = NodePath("Center/Stats/Crit_Info_Chance")
crit_mult_label = NodePath("Center/Stats/Crit_Info_Mult")
earn_mult_label = NodePath("")
click_sound = NodePath("SFX/Click")
clack_sound = NodePath("SFX/Clack")
earn_sound = NodePath("SFX/Earn")
timer_between_earning = NodePath("Timer_Between_Earning")

[node name="Timer_Between_Earning" type="Timer" parent="." unique_id=1892679348]
autostart = true

[node name="Saving_Timer" type="Timer" parent="." unique_id=938229234]
wait_time = 5.0
autostart = true

[node name="Wrap" type="Node" parent="." unique_id=1646261850]

[node name="Upgrades_Earn" type="VBoxContainer" parent="Wrap" unique_id=797345228]
offset_left = 13.0
offset_top = 127.0
offset_right = 449.0
offset_bottom = 572.0
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="Button_Upgrade_1" parent="Wrap/Upgrades_Earn" unique_id=1702155469 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("2_fgo2i")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade_n: 999"
earn = 2
max_level = 90
cost = 10.0
cost_mult = 1.1
number = 1
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Earn/Button_Upgrade_1" unique_id=2102781168]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 14.0
offset_top = 191.0
offset_right = 456.97412
offset_bottom = 199.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
editable = false
scrollable = false
ticks_position = 3

[node name="Button_Upgrade_2" parent="Wrap/Upgrades_Earn" unique_id=502105022 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("2_fgo2i")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade_n: 999"
earn = 15
max_level = 65
cost = 250.0
cost_mult = 1.1
number = 2
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Earn/Button_Upgrade_2" unique_id=1725269208]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 14.0
offset_top = 284.0
offset_right = 456.97412
offset_bottom = 292.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
editable = false
scrollable = false
ticks_position = 3

[node name="Button_Upgrade_3" parent="Wrap/Upgrades_Earn" unique_id=1492891381 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("2_fgo2i")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade_n: 999"
earn = 200
max_level = 45
cost = 4000.0
cost_mult = 1.1
number = 3
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Earn/Button_Upgrade_3" unique_id=1245936641]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 14.0
offset_top = 377.0
offset_right = 456.97412
offset_bottom = 385.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
editable = false
scrollable = false
ticks_position = 3

[node name="Button_Upgrade_4" parent="Wrap/Upgrades_Earn" unique_id=976049518 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("2_fgo2i")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade_n: 999"
earn = 350
max_level = 20
cost = 25000.0
cost_mult = 1.3
number = 4
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Earn/Button_Upgrade_4" unique_id=1319458700]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 14.0
offset_top = 469.0
offset_right = 456.97412
offset_bottom = 477.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
editable = false
scrollable = false
tick_count = 1
ticks_position = 3

[node name="Button_Upgrade_5" parent="Wrap/Upgrades_Earn" unique_id=225392917 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("2_fgo2i")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade_n: 999"
earn = 1000
max_level = 12
cost = 100000.0
cost_mult = 1.4
number = 5
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Earn/Button_Upgrade_5" unique_id=1983107165]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 14.0
offset_top = 561.0
offset_right = 456.97412
offset_bottom = 569.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
editable = false
scrollable = false
ticks_position = 3

[node name="Upgrades_Crit" type="VBoxContainer" parent="Wrap" unique_id=1686305966]
offset_left = 477.0
offset_top = 127.0
offset_right = 913.0
offset_bottom = 388.0
theme_override_constants/separation = 15
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Button_Crit_Upgrade_1" type="Button" parent="Wrap/Upgrades_Crit" unique_id=1432225044 node_paths=PackedStringArray("level_count_slider")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "xCrit_n: 999"
script = ExtResource("3_q5fsn")
crit_mult_plus = 0.05
max_level = 10
cost = 150.0
cost_mult = 2.5
number = 1
level_count_slider = NodePath("Level_Count")
metadata/_custom_type_script = "uid://d4n32f1itqr7s"

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Crit/Button_Crit_Upgrade_1" unique_id=1989134588]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 480.0
offset_top = 191.0
offset_right = 922.9741
offset_bottom = 199.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
max_value = 10.0
editable = false
scrollable = false
ticks_position = 3

[node name="Button_Crit_Upgrade_2" type="Button" parent="Wrap/Upgrades_Crit" unique_id=1614711276 node_paths=PackedStringArray("level_count_slider")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "xCrit_n: 999"
script = ExtResource("3_q5fsn")
crit_mult_plus = 0.07
max_level = 8
cost = 5000.0
cost_mult = 2.5
number = 2
level_count_slider = NodePath("Level_Count")
metadata/_custom_type_script = "uid://d4n32f1itqr7s"

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Crit/Button_Crit_Upgrade_2" unique_id=459421532]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 480.0
offset_top = 284.0
offset_right = 922.9741
offset_bottom = 292.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
max_value = 8.0
editable = false
scrollable = false
ticks_position = 3

[node name="Button_Crit_Upgrade_3" type="Button" parent="Wrap/Upgrades_Crit" unique_id=224201033 node_paths=PackedStringArray("level_count_slider")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "xCrit_n: 999"
script = ExtResource("3_q5fsn")
crit_mult_plus = 0.1
max_level = 7
cost = 15000.0
cost_mult = 2.5
number = 3
level_count_slider = NodePath("Level_Count")
metadata/_custom_type_script = "uid://d4n32f1itqr7s"

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Crit/Button_Crit_Upgrade_3" unique_id=1473342371]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 480.0
offset_top = 377.0
offset_right = 922.9741
offset_bottom = 385.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
max_value = 7.0
editable = false
scrollable = false
ticks_position = 3

[node name="Upgrades_Crit_Chance" type="VBoxContainer" parent="Wrap" unique_id=73283268]
offset_left = 477.0
offset_top = 403.0
offset_right = 913.0
offset_bottom = 480.0
theme_override_constants/separation = 15

[node name="UpgradeCritClass" parent="Wrap/Upgrades_Crit_Chance" unique_id=731876263 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("4_tg0j2")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "%Crit_n: 999"
chance_plus = 0.005
max_level = 4
cost = 20000.0
cost_mult = 3.2
number = 1
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Crit_Chance/UpgradeCritClass" unique_id=1465989322]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 480.0
offset_top = 469.0
offset_right = 922.9741
offset_bottom = 477.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
max_value = 5.0
editable = false
scrollable = false
ticks_position = 3

[node name="UpgradeCritClass2" parent="Wrap/Upgrades_Crit_Chance" unique_id=334210569 node_paths=PackedStringArray("level_count_slider") instance=ExtResource("4_tg0j2")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "%Crit_n: 999"
chance_plus = 0.01
max_level = 4
cost = 100000.0
cost_mult = 3.5
number = 2
level_count_slider = NodePath("Level_Count")

[node name="Level_Count" type="HSlider" parent="Wrap/Upgrades_Crit_Chance/UpgradeCritClass2" unique_id=765708231]
modulate = Color(1, 0.7647059, 0, 0.60784316)
top_level = true
layout_mode = 0
offset_left = 480.0
offset_top = 560.0
offset_right = 922.9741
offset_bottom = 568.0
scale = Vector2(0.98, 1.441)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CanvasTexture_qw60k")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_5yls4")
theme_override_icons/grabber_disabled = SubResource("CanvasTexture_p6jpk")
max_value = 5.0
editable = false
scrollable = false
ticks_position = 3

[node name="Center" type="CenterContainer" parent="." unique_id=285881033]
offset_left = 784.0
offset_top = 5.0
offset_right = 1159.0
offset_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Stats" type="VBoxContainer" parent="Center" unique_id=884706331]
layout_mode = 2
mouse_filter = 2

[node name="Label_Money_Counter" type="Label" parent="Center/Stats" unique_id=2022677590]
layout_mode = 2
text = "Money: 999"
label_settings = SubResource("LabelSettings_amr5s")
horizontal_alignment = 1

[node name="Label_Earn_Per_Second" type="Label" parent="Center/Stats" unique_id=574351433]
layout_mode = 2
text = "999/sec"
label_settings = SubResource("LabelSettings_1r6ip")
horizontal_alignment = 1

[node name="Crit_Info_Chance" type="Label" parent="Center/Stats" unique_id=1190389798]
layout_mode = 2
text = "99%"
label_settings = SubResource("LabelSettings_lixft")
horizontal_alignment = 1

[node name="Crit_Info_Mult" type="Label" parent="Center/Stats" unique_id=1151896611]
layout_mode = 2
text = "x999.9"
label_settings = SubResource("LabelSettings_qw60k")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=806634393]
offset_left = 936.0
offset_top = 454.0
offset_right = 1150.0
offset_bottom = 628.0
theme_override_constants/separation = 20

[node name="Cheats" type="Button" parent="VBoxContainer" unique_id=640368305 groups=["Chits_Buttons"]]
layout_mode = 2
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "Cheats"

[node name="Reset_Button" type="Button" parent="VBoxContainer" unique_id=1399302571]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Reset"

[node name="SFX" type="Node" parent="." unique_id=719737443]

[node name="Click" type="AudioStreamPlayer2D" parent="SFX" unique_id=1902236737]
stream = ExtResource("5_ekqlg")
bus = &"SFX"

[node name="Clack" type="AudioStreamPlayer2D" parent="SFX" unique_id=703057933]
stream = ExtResource("6_o4eol")
bus = &"SFX"

[node name="Earn" type="AudioStreamPlayer2D" parent="SFX" unique_id=1964124183]
stream = ExtResource("6_o4eol")
pitch_scale = 0.5
bus = &"SFX_EARN"

[node name="LineEdit" type="LineEdit" parent="." unique_id=24650309]
modulate = Color(1, 1, 1, 0)
offset_left = 1130.0
offset_top = 446.00003
offset_right = 1198.5
offset_bottom = 480.00003
scale = Vector2(0.3, 0.3)
alignment = 1
secret = true

[connection signal="timeout" from="Timer_Between_Earning" to="." method="add_money"]
[connection signal="timeout" from="Saving_Timer" to="." method="auto_saving"]
[connection signal="toggled" from="VBoxContainer/Cheats" to="." method="cheats"]
[connection signal="pressed" from="VBoxContainer/Reset_Button" to="." method="reset"]
[connection signal="text_submitted" from="LineEdit" to="." method="cheats_password"]
